--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,4 +4,5 @@
     <item name="lab02_new_entry_text" type="id">Nowy wpis</item>
     <item name="lab02_button_add_new" type="id">Dodaj Nowy</item>
     <item name="lab02_button_back" type="id">Wróć</item>
+    <item name="lab02_text" type="id">Text</item>
 </resources>
