Lab02 Last commit, all done, everything works

--- a/app/src/main/res/layout/lab02_main.xml
+++ b/app/src/main/res/layout/lab02_main.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lab02_entries_layout"
+    android:layout_alignParentTop="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="20dp"
+>
     <TextView
         android:id="@id/lab02_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Zadanie tekst"
         android:textColor="#000"
+        android:gravity="center"
         />
 </LinearLayout>
